[gd_scene load_steps=2 format=3 uid="uid://pvp_lobby_001"]

[ext_resource type="Script" path="res://scripts/ui/pvp_lobby.gd" id="1_script"]

[node name="PvPLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PVP BATTLE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "Host a game or join with a room code"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "HOST GAME"

[node name="RoomCodeContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="RoomCodeLabel" type="Label" parent="CenterContainer/VBoxContainer/RoomCodeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Your Room Code:"
horizontal_alignment = 1

[node name="RoomCodeDisplay" type="Label" parent="CenterContainer/VBoxContainer/RoomCodeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.3, 1.0, 0.5, 1)
text = "XXXX-XXXX-XXXX"
horizontal_alignment = 1

[node name="CopyButton" type="Button" parent="CenterContainer/VBoxContainer/RoomCodeContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "COPY CODE"

[node name="CopyHint" type="Label" parent="CenterContainer/VBoxContainer/RoomCodeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
text = "Share this code with your opponent"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OrLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
text = "- OR -"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="JoinContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="RoomCodeInput" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 22
placeholder_text = "XXXX-XXXX-XXXX"
alignment = 1
max_length = 14

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/JoinContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "JOIN"

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Not connected"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartBattleButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "START BATTLE"

[node name="DisconnectButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "DISCONNECT"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "< BACK"
